--- a/Medical.ipynb
+++ b/Medical.ipynb
@@ -6,7 +6,7 @@
       "name": "Medical.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNEykHZDDmAoSfOK5kdnXKC",
+      "authorship_tag": "ABX9TyMXjU4QZUnNPE5iOZsC7822",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +65,7 @@
         "df = pd.read_csv('Medicalpremium.csv')\n",
         "df"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -314,7 +314,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -364,7 +364,7 @@
       "source": [
         "df.describe()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +554,7 @@
       "source": [
         "corr = df.corrwith(df.iloc[:, -1], axis=0).drop(labels=['PremiumPrice'])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -575,7 +575,7 @@
         "plt.title(\"Premium Price Relations\")\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -617,7 +617,7 @@
         "      df[['PremiumPrice']] [(df[\"Age\"] > 54) & (df[\"Age\"] <= 66)].mean()\n",
         "      )"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +645,7 @@
       "source": [
         "pd.cut(df['Age'], bins=4).value_counts()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
         "adult2 = df[(df[\"Age\"] > 42) & (df[\"Age\"] <= 54)]\n",
         "senior = df[(df[\"Age\"] > 54) & (df[\"Age\"] <= 66)]"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -708,7 +708,7 @@
         "\n",
         "g = ['18-30', '30-42', '42-54', '54-66'] # for plotting and models later"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -725,7 +725,7 @@
         "age_base = pd.DataFrame([y_corr, a1_corr, a2_corr, s_corr])\n",
         "age_base"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -857,7 +857,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -895,7 +895,7 @@
       "source": [
         "df.boxplot([\"Height\", \"Weight\"])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -955,7 +955,7 @@
         "\n",
         "print(\"related to weight and diabetes is %.2f percent\" %(count/overweight) )"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1031,7 +1031,7 @@
         "# dependent variable\n",
         "y = df.iloc[:, -1].values"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1043,7 +1043,7 @@
         "# splitting into 4 parts, but it is too small\n",
         "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.9, random_state=1)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1057,7 +1057,7 @@
         "x_train = sc.fit_transform(x_train)\n",
         "x_test = sc.transform(x_test)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1074,7 +1074,7 @@
         "rfr_reg = RandomForestRegressor(n_estimators=1000, random_state=0) # number of trees (default is 100)\n",
         "rfr_reg.fit(x_train, y_train)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1117,7 +1117,7 @@
         "print(\"Premium Price Estimation Difference is $%.2f\" %mean_absolute_error(y_test, rfr_reg.predict(x_test)))\n",
         "ev1 = mean_absolute_error(y_test, rfr_reg.predict(x_test))"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,7 +1158,7 @@
       "source": [
         "corr.sort_values(ascending=False)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1191,7 +1191,7 @@
         "top5 = ['Age', 'AnyTransplants', 'NumberOfMajorSurgeries', 'BloodPressureProblems', 'Weight']\n",
         "top_x = df.loc[:, top5].values"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1206,7 +1206,7 @@
         "top_x_train = sc.fit_transform(top_x_train)\n",
         "top_x_test = sc.transform(top_x_test)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1225,7 +1225,7 @@
         "print(\"Premium Price Estimation Difference is $%.2f\" %mean_absolute_error(top_y_test, top_rfr_reg.predict(top_x_test)))\n",
         "ev2 = mean_absolute_error(top_y_test, top_rfr_reg.predict(top_x_test))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1266,7 +1266,7 @@
       "source": [
         "y_corr.sort_values(ascending=False)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1318,7 +1318,7 @@
         "\n",
         "res_y = mean_absolute_error(y_y_test, y_rfr_reg.predict(y_x_test))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1350,7 +1350,7 @@
       "source": [
         "a1_corr.sort_values(ascending=False)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1402,7 +1402,7 @@
         "\n",
         "res_a1 = mean_absolute_error(a1_y_test, a1_rfr_reg.predict(a1_x_test))"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1434,7 +1434,7 @@
       "source": [
         "a2_corr.sort_values(ascending=False)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1486,7 +1486,7 @@
         "\n",
         "res_a2 = mean_absolute_error(a2_y_test, a2_rfr_reg.predict(a2_x_test))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1518,7 +1518,7 @@
       "source": [
         "s_corr.sort_values(ascending=False)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1570,7 +1570,7 @@
         "\n",
         "res_s = mean_absolute_error(s_y_test, s_rfr_reg.predict(s_x_test))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,7 +1604,7 @@
         "\n",
         "print(\"Round 1:\", ev1,  \" Round 2:\", ev2,  \" Round 3:\", ev3)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1640,7 +1640,7 @@
         "plt.axhline(y=ev2, color='g', linestyle='-', label='Round 2')\n",
         "plt.legend()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1686,7 +1686,7 @@
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.optimizers import Adam"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1707,33 +1707,6 @@
         "sc = StandardScaler()\n",
         "ann_x_train = sc.fit_transform(ann_x_train)\n",
         "ann_x_test = sc.transform(ann_x_test)"
-      ],
-      "execution_count": 35,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Q_UU23APGRbF"
-      },
-      "source": [
-        "# initializing ANN\n",
-        "\n",
-        "m = tf.keras.Sequential([\n",
-        "    Input(shape=(9, )),                        \n",
-        "    Dense(1000, activation = tf.keras.layers.ReLU(negative_slope=1.0)), # ann_x_train include many negative values\n",
-        "    Dropout(0.4),\n",
-        "    Dense(100),\n",
-        "    Dropout(0.1),\n",
-        "    Dense(5),\n",
-        "    Dense(1)\n",
-        "])\n",
-        "\n",
-        "m.compile(loss='mae', optimizer=Adam(0.0001))\n",
-        "\n",
-        "m.summary()\n",
-        "\n",
-        "model = m.fit(ann_x_train, ann_y_train, epochs=500, batch_size=64)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1803,7 +1776,7 @@
       "source": [
         "pd.DataFrame(model.history['loss']).plot()"
       ],
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1841,7 +1814,7 @@
       "source": [
         "print(\"Round 1:\", ev1, \" ANN Model:\", mean_absolute_error(ann_y_test, m.predict(ann_x_test)))"
       ],
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1858,7 +1831,7 @@
         "id": "Fqf64sAXoFRQ"
       },
       "source": [
-        "The reason why the values close is the size of the datasets.\n",
+        "ANN model is around 10 percent better.\n",
         "\n",
         "DL needs more data for better performances."
       ]
